--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -29,29 +29,27 @@
 
 
 @font-face {
-    font-family: bebas neue;
-    src: local('bebas neue') url('/assests/fonts/bebas neue.eot') format("opentype");
+    font-family: 'bebas neue';
+    src: local('bebas neue') url('/assets/fonts/bebas neue.eot') format("opentype");
 }
-
 
 @font-face {
     font-family: 'bebas neue';
-    src: local('bebas neue'), url(/assests/fonts/bebas neue.eot);
-    src: local('bebas neue'), url(/assests/fonts/bebas neue.eot?#iefix) format('embedded-opentype'),
-         url(/assests/fonts/bebas neuet.woff2) format('woff2'),
-         url(/assests/fonts/bebas neue.woff) format('woff'),
-         url(/assests/fonts/bebas neue.ttf) format('truetype'),
-         url(/assests/fonts/bebas neue.svg#bebas_neueregular) format('svg');
+    src: local('bebas neue'), url(/assets/fonts/bebas neue.eot);
+    src: local('bebas neue'), url(/assets/fonts/bebas neue.eot?#iefix) format('embedded-opentype'),
+         url(/assets/fonts/bebas neuet.woff2) format('woff2'),
+         url(/assets/fonts/bebas neue.woff) format('woff'),
+         url(/assets/fonts/bebas neue.ttf) format('truetype'),
+         url(/assets/fonts/bebas neue.svg#bebas_neueregular) format('svg');
     font-weight: normal;
     font-style: normal;
-
 }
 
 body {
   font-size: 20px;
   line-height: 1.6;
   font-weight: 300;
-  font-family: bebas neue;
+  font-family: 'bebas neue';
   color: #9c9ca9;
   font-style: normal;
   overflow-x: hidden;
@@ -59,7 +57,7 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: bebas neue;
+  font-family: 'bebas neue';
   font-weight: 400;
   color: #18181c;
   line-height: 1.3;
