--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -49,7 +49,7 @@ body {
   font-size: 20px;
   line-height: 1.6;
   font-weight: 300;
-  font-family: 'bebas neue';
+  font-family: bebas neue;
   color: #9c9ca9;
   font-style: normal;
   overflow-x: hidden;
@@ -57,7 +57,7 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: 'bebas neue';
+  font-family: bebas neue;
   font-weight: 400;
   color: #18181c;
   line-height: 1.3;
