--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -27,22 +27,13 @@
 @import url("https://fonts.googleapis.com/css?family=Montserrat:300,300i,400,500");
 /* ----------------Text Fonts ------------------- */
 
-
 @font-face {
     font-family: 'bebas neue';
-    src: local('bebas neue') url(fonts/bebas neue.eot) format("opentype");
-}
-
-@font-face {
-    font-family: 'bebas neue';
-    src: local('bebas neue'), url(fonts/bebas neue.eot);
-    src: local('bebas neue'), url(fonts/bebas neue.eot?#iefix) format('embedded-opentype'),
-         url(fonts/bebas neuet.woff2) format('woff2'),
-         url(fonts/bebas neue.woff) format('woff'),
-         url(fonts/bebas neue.ttf) format('truetype'),
-         url(fonts/bebas neue.svg#bebas_neueregular) format('svg');
-    font-weight: normal;
-    font-style: normal;
+    src: local('bebas neue'), url(fonts/bebas-neue.eot);
+    src: local('bebas neue'), url(fonts/bebas-neue.eot?#iefix) format('embedded-opentype'),
+        url(fonts/bebas-neue.woff) format('woff'),
+        url(fonts/bebas-neue.ttf) format('truetype'),
+        url(fonts/bebas-neue.svg#bebas-neue) format('svg');
 }
 
 body {
